// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/sidebar/channel_filter should match snapshot 1`] = `
<div
  className="SidebarFilters"
>
  <WithTooltip
    id="channel-filter-tooltip"
    placement="right"
    shortcut={
      Object {
        "default": Array [
          Object {
            "defaultMessage": "Ctrl",
            "id": "shortcuts.generic.ctrl",
          },
          Object {
            "defaultMessage": "Shift",
            "id": "shortcuts.generic.shift",
          },
          "U",
        ],
        "mac": Array [
          "⌘",
          Object {
            "defaultMessage": "Shift",
            "id": "shortcuts.generic.shift",
          },
          "U",
        ],
      }
    }
    title={
      Object {
        "defaultMessage": "Filter by unread",
        "id": "sidebar_left.channel_filter.filterByUnread",
      }
    }
  >
    <a
      aria-label="unreads filter"
      className="SidebarFilters_filterButton"
      href="#"
      onClick={[Function]}
    >
      <i
        className="icon icon-filter-variant"
      />
    </a>
  </WithTooltip>
</div>
`;

exports[`components/sidebar/channel_filter should match snapshot if the unread filter is enabled 1`] = `
<div
  className="SidebarFilters"
>
  <WithTooltip
    id="channel-filter-tooltip"
    placement="right"
    shortcut={
      Object {
        "default": Array [
          Object {
            "defaultMessage": "Ctrl",
            "id": "shortcuts.generic.ctrl",
          },
          Object {
            "defaultMessage": "Shift",
            "id": "shortcuts.generic.shift",
          },
          "U",
        ],
        "mac": Array [
          "⌘",
          Object {
            "defaultMessage": "Shift",
            "id": "shortcuts.generic.shift",
          },
          "U",
        ],
      }
    }
    title={
      Object {
        "defaultMessage": "Show all channels",
        "id": "sidebar_left.channel_filter.showAllChannels",
      }
    }
  >
    <a
      aria-label="unreads filter"
      className="SidebarFilters_filterButton active"
      href="#"
      onClick={[Function]}
    >
      <i
        className="icon icon-filter-variant"
      />
    </a>
  </WithTooltip>
</div>
`;
